Revision history for Perl extension {{$dist->name}}

{{$NEXT}}

1.101420  2010-05-22 18:19:47 Europe/Vienna
    - removed weaver.ini since that's handled in Dist::Zilla's [@MARCEL] now
    - list Test::Synopsis in dist.ini so we don't use() it anymore

1.100700  2010-03-11 00:23:16 Europe/Vienna
    - original version