@@ -1,1 +1,2 @@
-Dist-Zilla-Plugin-SynopsisTests-*
+Dist-Zilla-Plugin-Test-Synopsis-*
+.build
