@@ -1,0 +1,53 @@
+NAME
+    Dist::Zilla::Plugin::Test::Synopsis - Release tests for synopses
+
+VERSION
+    version v2.0.0
+
+SYNOPSIS
+    In "dist.ini":
+
+        [Test::Synopsis]
+
+DESCRIPTION
+    This is an extension of Dist::Zilla::Plugin::InlineFiles, providing the
+    following file:
+
+      xt/release/synopsis.t - a standard Test::Synopsis test
+
+AVAILABILITY
+    The latest version of this module is available from the Comprehensive
+    Perl Archive Network (CPAN). Visit <http://www.perl.com/CPAN/> to find a
+    CPAN site near you, or see
+    <http://search.cpan.org/dist/Dist-Zilla-Plugin-Test-Synopsis/>.
+
+    The development version lives at
+    <http://github.com/doherty/Dist-Zilla-Plugin-Test-Synopsis> and may be
+    cloned from
+    <git://github.com/doherty/Dist-Zilla-Plugin-Test-Synopsis.git>. Instead
+    of sending patches, please fork this project using the standard git and
+    github infrastructure.
+
+SOURCE
+    The development version is on github at
+    <http://github.com/doherty/Dist-Zilla-Plugin-Test-Synopsis> and may be
+    cloned from
+    <git://github.com/doherty/Dist-Zilla-Plugin-Test-Synopsis.git>
+
+BUGS AND LIMITATIONS
+    No bugs have been reported.
+
+    Please report any bugs or feature requests through the web interface at
+    <https://github.com/doherty/Dist-Zilla-Plugin-Test-Synopsis/issues>.
+
+AUTHORS
+    *   Marcel Grünauer <marcel@cpan.org>
+
+    *   Mike Doherty <doherty@cpan.org>
+
+COPYRIGHT AND LICENSE
+    This software is copyright (c) 2010 by Mike Doherty.
+
+    This is free software; you can redistribute it and/or modify it under
+    the same terms as the Perl 5 programming language system itself.
+
