@@ -1,0 +1,3 @@
+machine api.twitter.com
+  login jdoe@example.com
+  password example
