@@ -1,7 +1,9 @@
-name = Dist-Zilla-Plugin-SynopsisTests
+name = Dist-Zilla-Plugin-Test-Synopsis
 copyright_year = 2010
+author = Marcel Grünauer <marcel@cpan.org>
+author = Mike Doherty <doherty@cpan.org>
 
-[@MARCEL]
+[@Author::DOHERTY]
 
-[Prereq]
+[Prereqs]
 Test::Synopsis = 0
