@@ -1,6 +1,7 @@
 Revision history for Perl extension {{$dist->name}}
 
 {{$NEXT}}
+    - Renamed to Dist::Zilla::Plugin::Test::Synopsis
 
 1.101420  2010-05-22 18:19:47 Europe/Vienna
     - removed weaver.ini since that's handled in Dist::Zilla's [@MARCEL] now
